--- a/VFW Projects/Antonio_Ariana_project2/css/style.css
+++ b/VFW Projects/Antonio_Ariana_project2/css/style.css
@@ -56,22 +56,7 @@ li{
 
 p{color:white; background-color: rgba(0, 0, 0, 0.6);}
 h2{color:white; background-color: rgba(0, 0, 0, 0.6);}
-
-.rating {
-  unicode-bidi: bidi-override;
-  direction: rtl;
-}
-.rating > span {
-  display: inline-block;
-  position: relative;
-  width: 1.1em;
-}
-.rating > span:hover:before,
-.rating > span:hover ~ span:before {
-   content: "\2605";
-   position: absolute;
-}
-
+#pullData{color:white;}
 
 
 
