--- a/VFW Projects/Antonio_Ariana_project3/css/style.css
+++ b/VFW Projects/Antonio_Ariana_project3/css/style.css
@@ -55,7 +55,8 @@ li{
 p{color:white; background-color: rgba(0, 0, 0, 0.6);}
 h2{color:white; background-color: rgba(0, 0, 0, 0.6);}
 #pullData{color:white;}
-.displayDataStyle{color:white; background-image: none;}
+.displayDataStyle{color:white; background-color: rgba(0, 0, 0, 0.6);}
+.errorMessage{color:red; background-color: rgba(0, 0, 0, 0.6);}
 
 
 
