Attempted to add range value text box. Got text box to appear but not to save to locale storage.

--- a/VFW Projects/Antonio_Ariana_project4/css/style.css
+++ b/VFW Projects/Antonio_Ariana_project4/css/style.css
@@ -64,6 +64,7 @@ h2{color:white; background-color: rgba(0, 0, 0, 0.6);}
 #pullData{color:white;}
 .displayDataStyle{color:white; background-image: none;}
 .errorMessage{color:red; background-color: rgba(0, 0, 0, 0.6);}
+#ratingInput{width: auto}
 
 
 
