adding image file for CTA.

--- a/MIU/Week_1/Antonio_Ariana_project1/css/style.css
+++ b/MIU/Week_1/Antonio_Ariana_project1/css/style.css
@@ -97,7 +97,8 @@ h3 {color:white;}
     margin-left: auto;
     margin-right: auto;
     font-size: 28px}
-
+#search{width: 305px;}
+#filmreel{width:305px; height: auto;margin-top:0px}
 
 
 
