--- a/MIU/Week_2/Antonio_Ariana_GoldApp/css/style.css
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/css/style.css
@@ -105,6 +105,12 @@ form{margin-left: -55px;}
 #friends h3 {padding: 0px;margin: 0px;}
 #friends h4 {font-size: 14px;margin-top:5px;margin-bottom: 5px;color:blue;}
 #friends li {padding-bottom:5px;}
+#author img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+#author p {text-align: center;}
 
 
 
