--- a/MIU/Week_2/Antonio_Ariana_GoldApp/css/style.css
+++ b/MIU/Week_2/Antonio_Ariana_GoldApp/css/style.css
@@ -38,6 +38,11 @@ fieldset{border: none;}
     list-style: none;
     margin-left: -40px;
 }
+li{
+    list-style: none;
+}
+.newLiStyle{list-style: none;
+    margin-left: -70px;}
 legend{color:white; background-color: rgba(0, 0, 0, 0.6); font-size: 1.5em;margin-left: -15px;}
 #title{border-radius: 5px;}
 #date{border-radius: 5px;}
