--- a/MIU/Week_2/Antonio_Ariana_BronzeApp/css/style.css
+++ b/MIU/Week_2/Antonio_Ariana_BronzeApp/css/style.css
@@ -1,6 +1,6 @@
 /*
 Author: Ariana Antonio
-Project 2: My Hollywood - Gold
+Project 2: My Hollywood - Bronze
 MIU 1309
 */
 .body{font-family: Georgia, Ariel;
