--- a/MIU/Week_3/Antonio_Ariana_GoldApp/css/style.css
+++ b/MIU/Week_3/Antonio_Ariana_GoldApp/css/style.css
@@ -13,9 +13,9 @@ MIU 1309
 }
 #background li {
     list-style: none;
-}
-#content{overflow: scroll;}
-#addMovie {
+}*/
+/*#content{overflow: scroll;}*/
+/*#addMovie {
     font-weight: bold;
     text-align: center;
     background: #f90c0c;
@@ -28,7 +28,7 @@ MIU 1309
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0px;
-}
+}*/
 /*a{color:white; background-color: rgba(0, 0, 0, 0.6);}
 a:hover{color: yellow; outline: none;}*/
 fieldset{border: none;}
