One more attempt.

--- a/MIU/Week_4/Antonio_Ariana_GoldApp/css/style.css
+++ b/MIU/Week_4/Antonio_Ariana_GoldApp/css/style.css
@@ -149,6 +149,7 @@ label.error {display: block; margin: 10px 0;color: red;}
 
 
  /*Have tried several methods to get a bg image to overide JQM and so far have been unsuccessful*/
+/*
 .ui-mobile .type-home .ui-content { 
     background: white url(images/moviereelbg.jpg); 
     background-repeat: no-repeat;
@@ -176,6 +177,12 @@ box-shadow: 0px 0px 30px 5px rgba(107, 105, 105, 0.3) inset,
 }
 #backgroundimage  { background: transparent url(images/moviereelbg.jpg) 0 0 no-repeat; }*/
 
+#home, #about, #addItem, #credits, .ui-content{
+background-image: url(../images/cover.jpg);
+}
+#home #credits .ui-page .ui-body-c{
+ background: url(images/cover.jpg);   
+}
 
 
 
