--- a/MIU/Week_4/Antonio_Ariana_GoldApp/css/style.css
+++ b/MIU/Week_4/Antonio_Ariana_GoldApp/css/style.css
@@ -148,40 +148,9 @@ form{margin-left: -55px;}*/
 label.error {display: block; margin: 10px 0;color: red;}
 
 
- /*Have tried several methods to get a bg image to overide JQM and so far have been unsuccessful*/
-/*
-.ui-mobile .type-home .ui-content { 
-    background: white url(images/moviereelbg.jpg); 
-    background-repeat: no-repeat;
-    background-position: 50% 80%; 50% 80% mozilla optimized 
-    background-attachment: fixed; 
-    background-size: 50%; 50% mozilla optimized  
-}
-body {
-    background: url(images/moviereelbg.jpg) !important;
-    background-attachment:fixed;
-	background-size:cover;
-}
-
-.ui-page, .ui-content, .ui-btn {
-	background: transparent;
-}
-.ui-page.ui-body-c{
-
-background:url(images/moviereelbg.jpg);
-
-box-shadow: 0px 0px 30px 5px rgba(107, 105, 105, 0.3) inset,
-
-0px 0px 0px 1px rgba(107, 105, 105, 0.4) inset;
-
-}
-#backgroundimage  { background: transparent url(images/moviereelbg.jpg) 0 0 no-repeat; }*/
 
 #home, #about, #addItem, #credits, .ui-content{
-background-image: url(../images/cover.jpg);
-}
-#home #credits .ui-page .ui-body-c{
- background: url(images/cover.jpg);   
+background-image: url(../images/plaidbg.jpg);
 }
 
 
