--- a/MIU/Week_4/Antonio_Ariana_BronzeApp/css/style.css
+++ b/MIU/Week_4/Antonio_Ariana_BronzeApp/css/style.css
@@ -1,6 +1,6 @@
 /*
 Author: Ariana Antonio
-Project 3: My Hollywood - Bronze
+Project 4: My Hollywood - Bronze
 MIU 1309
 */
 .body{font-family: Georgia, Ariel;
@@ -143,7 +143,9 @@ form{margin-left: -55px;}
     padding:0px 0;
     margin-bottom: 0px;
 }
-
+#home, #about, #credits, .ui-content{
+background-image: url(../images/filmcountdown.jpg);
+}
 
 
 
