--- a/MIU/Week_4/Antonio_Ariana_GoldApp/css/style.css
+++ b/MIU/Week_4/Antonio_Ariana_GoldApp/css/style.css
@@ -127,7 +127,7 @@ form{margin-left: -55px;}*/
     padding-top: 0px;
     margin-bottom: 0px;
 }
-.star{width:25px;height:25px;}
+.star {width:20px;height:20px;}
 #friends h3 {padding: 0px;margin: 0px;}
 #friends h4 {font-size: 14px;margin-top:5px;margin-bottom: 5px;color:blue;}
 #friends li {padding-bottom:5px;}
@@ -152,6 +152,7 @@ label.error {display: block; margin: 10px 0;color: red;}
 background-image: url(../images/plaidbg.jpg);
 }
 
+input[type="radio"] {display: none}
 
 
 
