--- a/ASD/Project_1/css/style.css
+++ b/ASD/Project_1/css/style.css
@@ -29,4 +29,9 @@ background-image: url(../images/plaidbg.jpg);
     margin-left: -40px;
 }
 .star {width:20px;height:20px;}
+#author img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
 
