--- a/ASD/Project_2/css/style.css
+++ b/ASD/Project_2/css/style.css
@@ -14,7 +14,7 @@ li{list-style: none;}
     padding-top: 0px;
     margin-bottom: 0px;
 }
-#headerImg{
+.headerImg{
     padding:0px 0;
     margin-top: 5px;
     margin-bottom: 10px;
